# ai-dememory

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  PUBLIC_RELEASE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: auto-approve.yml  ci.yml  publish.yml  release.yml  tag-release.yml
ai_dememory_tool/: __init__.py  cli.py  mcp_profiles.py
ai_dememory_tool/admin/: __init__.py
ai_dememory_tool/mcp_server/: __init__.py
distilled/: README.md
docs/: ai-operated-releases.md  architecture.md  auto-approval-smoke.md  auto-approval.md  codex-plugin.md  create-memory-repo.md  distribution.md  git-lessons.md  hooks.md  import-capture.md  install.md  local-api.md  local-mcp.md  mcp-client-config.md  mcp-tool-profiles.md  mcp-v2-gap-analysis.md  mcp-v2.md  memory-graph.md  memory-quality.md  obsidian.md  operational-loop.md  operations.md  pr-draft.md  release-v2-checklist.md  review-workflows.md  roadmap-status.md  scheduler-plugin-blueprint.md  scheduler.md  schema.md  shared-memory-governance-roadmap.md  sleep-consolidation.md  vector-migration.md
docs/adr/: 0001-review-and-conflict-workflows.md  0002-configurable-review-modes.md  0003-lifecycle-scoring.md  0004-safe-sleep-consolidation.md  0005-hook-provider-config.md  0006-managed-hook-instruction-blocks.md  0007-import-capture-review-candidates.md  0008-git-lesson-capture.md  0009-measured-vector-search-gate.md  0010-mcp-inventory-drift-check.md  0011-reusable-install-smoke-runner.md  (+240 more)
inbox/: README.md
indexes/: README.md
mcp/: README.md  __init__.py
quality/: recall-fixtures.json
reports/: README.md
scripts/: README.md  __init__.py  acceptance_guard.py  adr_guard.py  ai_dememory.py  ai_release_guard.py  api_smoke.py  artifact_guard.py  build_artifacts.py  capture_miss.py  ci_guard.py  config_file.py  consolidate_memory.py  context_memory.py  doctor.py  durable_provenance.py  eval_recall.py  export_context.py  git_lessons.py  graph_memory.py  harness_hooks.py  hook_event.py  http_api.py  index_memory.py  install_smoke.py  lifecycle.py  maintenance.py  manual_acceptance.py  mcp_client_smoke.py  mcp_inventory.py  mcp_runtime_smoke.py  memorylib.py  onboarding.py  package_build_smoke.py  pr_draft_guard.py  pr_template_guard.py  provider_import.py  publish_guard.py  publish_plan.py  published_artifact_guard.py  (+18 more)
templates/: active-context.md  archive-note.md  durable-memory.md  memory.md  project-decision.md  session-note.md  tool-note.md
tests/: test_ai_release.py  test_harness_hooks.py  test_mcp_profiles.py  test_memory_tools.py  test_onboarding.py  test_portability.py  test_turn_context.py
vault-template/: .ai-dememory-ignore.toml  .ai-dememory.toml  .gitignore  README.md
(+44 files in other folders)
