[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dememory"
version = "2.0.0rc1"
description = "Local-first personal multi-LLM memory toolchain and MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Gonzalo Torreras" }]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/GonzaloTorreras/ai-dememory"
Repository = "https://github.com/GonzaloTorreras/ai-dememory"
Issues = "https://github.com/GonzaloTorreras/ai-dememory/issues"
Documentation = "https://github.com/GonzaloTorreras/ai-dememory/tree/main/docs"

[project.scripts]
ai-dememory = "ai_dememory_tool.cli:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["ai_dememory_tool*", "scripts", "mcp", "mcp.server"]

[tool.setuptools.package-data]
ai_dememory_tool = [
  "templates/vault/**",
  "templates/vault/.ai-dememory.toml",
  "templates/vault/.ai-dememory-ignore.toml",
  "templates/vault/.gitignore",
]
