[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dememory"
version = "2.1.0"
description = "Local-first personal multi-LLM memory toolchain and MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Gonzalo Torreras" }]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/GonzaloTorreras/ai-dememory"
Repository = "https://github.com/GonzaloTorreras/ai-dememory"
Issues = "https://github.com/GonzaloTorreras/ai-dememory/issues"
Documentation = "https://github.com/GonzaloTorreras/ai-dememory/tree/main/docs"

[project.scripts]
ai-dememory = "ai_dememory_tool.cli:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
packages = ["ai_dememory_tool", "ai_dememory_tool.admin", "ai_dememory_tool.mcp_server"]
package-dir = { "ai_dememory_tool.admin" = "scripts", "ai_dememory_tool.mcp_server" = "mcp/server" }

[tool.setuptools.package-data]
ai_dememory_tool = [
  "templates/vault/**",
  "templates/vault/.ai-dememory.toml",
  "templates/vault/.ai-dememory-ignore.toml",
  "templates/vault/.gitignore",
]
